--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "ext-simplexml": "*"
+        "ext-simplexml": "*",
+        "matthiasmullie/minify": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
