--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "adrianschubek/html-builder",
-    "description": "Easy to use Html Builder",
+    "description": "Powerful & Easy to use Html Builder",
     "type": "library",
-    "homepage": "https://adriansoftware.de/html-builder",
+    "homepage": "https://adriansoftware.de/builder",
     "license": "MIT",
     "authors": [
         {
@@ -25,6 +25,7 @@
     "require-dev": {
         "phpunit/phpunit": "^8.4",
         "symfony/var-dumper": "^5.0",
-        "filp/whoops": "^2.7"
+        "filp/whoops": "^2.7",
+        "adrianschubek/router": "dev-master"
     }
 }
