--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "adrianschubek/html-builder",
     "description": "Powerful & Easy to use Html Builder",
     "type": "library",
-    "homepage": "https://adriansoftware.de/builder",
+    "homepage": "https://docs.adriansoftware.de/builder",
     "license": "MIT",
     "authors": [
         {
